[gd_scene load_steps=21 format=4 uid="uid://b07vx4d7tiv0j"]

[ext_resource type="Texture2D" uid="uid://btkagvkhsa7l" path="res://entities/maze/images/TilesetDungeon.png" id="1_gipk5"]
[ext_resource type="Script" uid="uid://bi6ypj8ifpcfg" path="res://entities/maze/maze.gd" id="1_yq88i"]
[ext_resource type="PackedScene" uid="uid://crnchlmfctsl7" path="res://entities/maze/gatekeeper/ray/godray.tscn" id="3_7y72b"]
[ext_resource type="PackedScene" uid="uid://cjf0jb6dq84f0" path="res://entities/maze/robber/robber.tscn" id="3_w2k2n"]
[ext_resource type="PackedScene" uid="uid://c86bdnailm0t" path="res://entities/maze/gatekeeper/gatekeeper.tscn" id="4_vngmh"]
[ext_resource type="Shader" uid="uid://bpnh2pudsc33d" path="res://entities/maze/grayscale.gdshader" id="5_aidv1"]
[ext_resource type="Texture2D" uid="uid://qhrwdb0ood4j" path="res://entities/maze/images/TilesetReliefDetail.png" id="5_trkgh"]
[ext_resource type="Texture2D" uid="uid://bgv5mhyiodtv3" path="res://entities/maze/maze_bg.png" id="6_aidv1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gipk5"]
texture = ExtResource("1_gipk5")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/terrains_peering_bit/right_side = 0
3:1/0/terrains_peering_bit/bottom_right_corner = 0
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/bottom_left_corner = 0
3:1/0/terrains_peering_bit/left_side = 0
3:1/0/terrains_peering_bit/top_left_corner = 0
3:1/0/terrains_peering_bit/top_side = 0
3:1/0/terrains_peering_bit/top_right_corner = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0

[sub_resource type="TileSet" id="TileSet_yq88i"]
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "default"
terrain_set_0/terrain_0/color = Color(0.3791666, 0.25, 0.5, 1)
navigation_layer_0/layers = 1
navigation_layer_1/layers = 1
sources/1 = SubResource("TileSetAtlasSource_gipk5")

[sub_resource type="NavigationPolygon" id="NavigationPolygon_trkgh"]
vertices = PackedVector2Array(8, -3.234375, 8, 5.21875, 5.3046875, 8, -5.125, 8, -8, 5.21875, -8, -3.7734375, -5.6640625, -8, 5.3046875, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4, 5, 6, 7)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-5.66555, -8, 5.305832, -8, 8, -3.2374563, 8, 5.215904, 5.305832, 8, -5.1259747, 8, -8, 5.215904, -8, -3.7770329)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_yxdw4"]
vertices = PackedVector2Array(8, -3.234375, 8, 5.21875, 5.3046875, 8, -5.125, 8, -8, 5.21875, -8, -3.7734375, -5.6640625, -8, 5.3046875, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4, 5, 6, 7)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-5.66555, -8, 5.305832, -8, 8, -3.2374563, 8, 5.215904, 5.305832, 8, -5.1259747, 8, -8, 5.215904, -8, -3.7770329)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_jaw4k"]
vertices = PackedVector2Array(8, -3.234375, 8, 5.21875, 5.3046875, 8, -5.125, 8, -8, 5.21875, -8, -3.7734375, -5.6640625, -8, 5.3046875, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4, 5, 6, 7)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-5.66555, -8, 5.305832, -8, 8, -3.2374563, 8, 5.215904, 5.305832, 8, -5.1259747, 8, -8, 5.215904, -8, -3.7770329)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_vxbb7"]
vertices = PackedVector2Array(8, -3.234375, 8, 5.21875, 5.3046875, 8, -5.125, 8, -8, 5.21875, -8, -3.7734375, -5.6640625, -8, 5.3046875, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4, 5, 6, 7)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-5.66555, -8, 5.305832, -8, 8, -3.2374563, 8, 5.215904, 5.305832, 8, -5.1259747, 8, -8, 5.215904, -8, -3.7770329)])
agent_radius = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yq88i"]
texture = ExtResource("1_gipk5")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrains_peering_bit/right_side = 2
0:0/0/terrains_peering_bit/bottom_right_corner = 2
0:0/0/terrains_peering_bit/bottom_side = 2
0:0/0/terrains_peering_bit/bottom_left_corner = 2
0:0/0/terrains_peering_bit/left_side = 2
0:0/0/terrains_peering_bit/top_left_corner = 2
0:0/0/terrains_peering_bit/top_side = 2
0:0/0/terrains_peering_bit/top_right_corner = 2
0:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_trkgh")
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 2
1:0/0/terrains_peering_bit/right_side = 2
1:0/0/terrains_peering_bit/bottom_right_corner = 2
1:0/0/terrains_peering_bit/bottom_side = 2
1:0/0/terrains_peering_bit/bottom_left_corner = 2
1:0/0/terrains_peering_bit/left_side = 2
1:0/0/terrains_peering_bit/top_left_corner = 2
1:0/0/terrains_peering_bit/top_side = 2
1:0/0/terrains_peering_bit/top_right_corner = 2
1:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_yxdw4")
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 2
2:1/0/terrains_peering_bit/right_side = 2
2:1/0/terrains_peering_bit/bottom_right_corner = 2
2:1/0/terrains_peering_bit/bottom_side = 2
2:1/0/terrains_peering_bit/bottom_left_corner = 2
2:1/0/terrains_peering_bit/left_side = 2
2:1/0/terrains_peering_bit/top_left_corner = 2
2:1/0/terrains_peering_bit/top_side = 2
2:1/0/terrains_peering_bit/top_right_corner = 2
2:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_jaw4k")
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/terrains_peering_bit/right_side = 0
3:1/0/terrains_peering_bit/bottom_right_corner = 0
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/bottom_left_corner = 0
3:1/0/terrains_peering_bit/left_side = 0
3:1/0/terrains_peering_bit/top_left_corner = 0
3:1/0/terrains_peering_bit/top_side = 0
3:1/0/terrains_peering_bit/top_right_corner = 0
3:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_vxbb7")
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
8:3/0/terrain_set = 0
8:3/0/terrain = 1
8:3/0/terrains_peering_bit/right_side = 1
8:3/0/terrains_peering_bit/bottom_right_corner = 1
8:3/0/terrains_peering_bit/bottom_side = 1
8:3/0/terrains_peering_bit/bottom_left_corner = 1
8:3/0/terrains_peering_bit/left_side = 1
8:3/0/terrains_peering_bit/top_left_corner = 1
8:3/0/terrains_peering_bit/top_side = 1
8:3/0/terrains_peering_bit/top_right_corner = 1

[sub_resource type="TileSet" id="TileSet_w2k2n"]
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "floor"
terrain_set_0/terrain_0/color = Color(0.25, 0.5, 0.29583335, 1)
terrain_set_0/terrain_1/name = "wall"
terrain_set_0/terrain_1/color = Color(0.68171024, 0.23655567, 0.5937238, 1)
terrain_set_0/terrain_2/name = "door"
terrain_set_0/terrain_2/color = Color(0.46875, 0.5, 0.25, 1)
navigation_layer_0/layers = 1
sources/1 = SubResource("TileSetAtlasSource_yq88i")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yxdw4"]
texture = ExtResource("5_trkgh")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0

[sub_resource type="TileSet" id="TileSet_jaw4k"]
sources/0 = SubResource("TileSetAtlasSource_yxdw4")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7y72b"]
shader = ExtResource("5_aidv1")
shader_parameter/filter = Vector3(0.5, 0.5, 0.5)
shader_parameter/weighted = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_trkgh"]

[node name="Maze" type="Node2D"]
script = ExtResource("1_yq88i")
gatekeeper_scene = ExtResource("4_vngmh")
godray_scene = ExtResource("3_7y72b")

[node name="TileMapLayerDefault" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAQADAAEAAAABAAAAAQADAAEAAAACAAAAAQADAAEAAAADAAAAAQADAAEAAAAEAAAAAQADAAEAAAAFAAAAAQADAAEAAAAGAAAAAQADAAEAAAAHAAAAAQADAAEAAAAIAAAAAQADAAEAAAAEAAEAAQADAAEAAAADAAEAAQADAAEAAAACAAEAAQADAAEAAAABAAEAAQADAAEAAAAAAAEAAQADAAEAAAAAAAIAAQADAAEAAAAAAAMAAQADAAEAAAAAAAQAAQADAAEAAAAAAAUAAQADAAEAAAAAAAYAAQADAAEAAAAAAAcAAQADAAEAAAAAAAgAAQADAAEAAAABAAIAAQADAAEAAAABAAMAAQADAAEAAAABAAQAAQADAAEAAAABAAUAAQADAAEAAAABAAYAAQADAAEAAAABAAcAAQADAAEAAAABAAgAAQADAAEAAAACAAIAAQADAAEAAAACAAMAAQADAAEAAAACAAQAAQADAAEAAAACAAUAAQADAAEAAAACAAYAAQADAAEAAAACAAcAAQADAAEAAAACAAgAAQADAAEAAAADAAIAAQADAAEAAAADAAMAAQADAAEAAAADAAQAAQADAAEAAAADAAUAAQADAAEAAAADAAYAAQADAAEAAAADAAcAAQADAAEAAAADAAgAAQADAAEAAAAEAAIAAQADAAEAAAAEAAMAAQADAAEAAAAEAAQAAQADAAEAAAAEAAUAAQADAAEAAAAEAAYAAQADAAEAAAAEAAcAAQADAAEAAAAEAAgAAQADAAEAAAAFAAEAAQADAAEAAAAFAAIAAQADAAEAAAAFAAMAAQADAAEAAAAFAAQAAQADAAEAAAAFAAUAAQADAAEAAAAFAAYAAQADAAEAAAAFAAcAAQADAAEAAAAFAAgAAQADAAEAAAAGAAEAAQADAAEAAAAGAAIAAQADAAEAAAAGAAMAAQADAAEAAAAGAAQAAQADAAEAAAAGAAUAAQADAAEAAAAGAAYAAQADAAEAAAAGAAcAAQADAAEAAAAGAAgAAQADAAEAAAAHAAEAAQADAAEAAAAHAAIAAQADAAEAAAAHAAMAAQADAAEAAAAHAAQAAQADAAEAAAAHAAUAAQADAAEAAAAHAAYAAQADAAEAAAAHAAcAAQADAAEAAAAHAAgAAQADAAEAAAAIAAEAAQADAAEAAAAIAAIAAQADAAEAAAAIAAMAAQADAAEAAAAIAAQAAQADAAEAAAAIAAUAAQADAAEAAAAIAAYAAQADAAEAAAAIAAcAAQADAAEAAAAIAAgAAQADAAEAAAA=")
tile_set = SubResource("TileSet_yq88i")

[node name="TileMapLayerMaze" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAAAAAAAAQAIAAMAAAABAAAAAQAIAAMAAAACAAAAAQAIAAMAAAADAAAAAQAIAAMAAAAEAAAAAQAIAAMAAAAFAAAAAQAIAAMAAAAGAAAAAQAIAAMAAAAHAAAAAQAIAAMAAAAIAAAAAQAIAAMAAAAAAAEAAQAIAAMAAAAAAAIAAQAIAAMAAAAAAAMAAQAIAAMAAAAAAAQAAQAIAAMAAAAAAAUAAQAIAAMAAAAAAAYAAQAIAAMAAAAAAAcAAQAIAAMAAAAAAAgAAQAIAAMAAAABAAEAAQACAAEAAAACAAEAAQADAAEAAAADAAEAAQAAAAAAAAABAAIAAQADAAEAAAABAAMAAQAAAAAAAAABAAUAAQAAAAAAAAADAAMAAQABAAAAAAAFAAEAAQAAAAAAAAAFAAMAAQABAAAAAAADAAUAAQAAAAAAAAAFAAUAAQAAAAAAAAAHAAEAAQAAAAAAAAAHAAMAAQABAAAAAAAHAAUAAQAAAAAAAAAHAAcAAQAAAAAAAAAFAAcAAQAAAAAAAAADAAcAAQAAAAAAAAABAAcAAQAAAAAAAAABAAgAAQAIAAMAAAACAAgAAQAIAAMAAAADAAgAAQAIAAMAAAAEAAgAAQAIAAMAAAAFAAgAAQAIAAMAAAAGAAgAAQAIAAMAAAAIAAEAAQAIAAMAAAAIAAIAAQAIAAMAAAAIAAMAAQAIAAMAAAAIAAQAAQAIAAMAAAAIAAUAAQAIAAMAAAAIAAYAAQAIAAMAAAAIAAcAAQAIAAMAAAACAAIAAQAIAAMAAAAEAAIAAQAIAAMAAAAGAAIAAQAIAAMAAAAGAAQAAQAIAAMAAAAGAAYAAQAIAAMAAAAEAAYAAQAIAAMAAAACAAYAAQAIAAMAAAACAAQAAQAIAAMAAAAEAAQAAQAIAAMAAAACAAcAAQADAAEAAAABAAYAAQADAAEAAAAEAAcAAQADAAEAAAADAAYAAQADAAEAAAAGAAcAAQADAAEAAAABAAQAAQADAAEAAAADAAQAAQADAAEAAAACAAUAAQADAAEAAAACAAMAAQADAAEAAAADAAIAAQADAAEAAAAEAAEAAQADAAEAAAAGAAEAAQADAAEAAAAFAAIAAQADAAEAAAAHAAIAAQADAAEAAAAGAAMAAQADAAEAAAAHAAQAAQADAAEAAAAGAAUAAQADAAEAAAAHAAYAAQADAAEAAAAFAAYAAQADAAEAAAAEAAUAAQADAAEAAAAFAAQAAQADAAEAAAAEAAMAAQADAAEAAAAHAAgAAQAIAAMAAAAIAAgAAQAIAAMAAAA=")
tile_set = SubResource("TileSet_w2k2n")

[node name="TileMapLayerLadder" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_set = SubResource("TileSet_jaw4k")

[node name="Gatekeepers" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="FilterSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_7y72b")
position = Vector2(72, 72)
texture = ExtResource("6_aidv1")

[node name="Godrays" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Robber" parent="." node_paths=PackedStringArray("maze") instance=ExtResource("3_w2k2n")]
unique_name_in_owner = true
position = Vector2(24, 26)
maze = NodePath("..")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 144.0
offset_bottom = 145.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_trkgh")

[connection signal="mouse_entered" from="PanelContainer" to="." method="_on_panel_container_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer" to="." method="_on_panel_container_mouse_exited"]
